[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Mob.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Player2.gd" type="Script" id=5]
[ext_resource path="res://Assets/highway.png" type="Texture" id=6]
[ext_resource path="res://Assets/Car Crash Sound Effect in High Quality.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Upon Arrival.wav" type="AudioStream" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 104, -256, 0, 0, 0, 0, 1856, -256, 0, 0, 0, 0, 1864, -128, 0, 0, 0, 0, 104, -136, 0, 0, 0, 0, 104, -256 )
}

[node name="Main" type="Node"]
script = ExtResource( 4 )
Mob = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 335.0
margin_bottom = 512.0
rect_scale = Vector2( 3, 4.05 )
texture = ExtResource( 6 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
anchor_left = 0.00663265
anchor_right = 0.00663265
margin_left = 955.0
margin_right = 1290.0
margin_bottom = 512.0
rect_scale = Vector2( 3, 4.05 )
texture = ExtResource( 6 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 100, 674.238 )
speed = 800

[node name="Player2" parent="." instance=ExtResource( 3 )]
position = Vector2( 100, 200 )
script = ExtResource( 5 )
speed = 800

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.45

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 1459.56, 1685.86 )

[node name="StartPosition2" type="Position2D" parent="."]
position = Vector2( 496.163, 1685.86 )

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 5.0

[node name="Mob2Path" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="Mob2SpawnLocation" type="PathFollow2D" parent="Mob2Path"]
position = Vector2( 104, -256 )
rotate = false
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="hit" from="Player2" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
